--- a/projects.html
+++ b/projects.html
@@ -275,7 +275,7 @@ add
                     <div class="dropdown col-md-6 d-flex mt-5 flex-column text-center justify-content-center animate__animated animate__zoomIn animate__delay-1s">
                         <h2 class="main-heading mb-0 projects_head">My <span class="my_projects">Projects</span></h2>
                         <p class="pre-heading font-weight-bolder" class="mb-0 mt-3 text-center animate__animated animate__zoomIn animate__delay-2s">
-                            My first web app is an OTP Verification System. I will be uploading my other projects with the usage of different programming languages
+                            This is a list of my projects using different kinds of programming language.
                         </p>
                     </div>
                 </div>
